trunk/Archive2/ad/0eef9e01fd2ce9/output
main.cpp:16:0: error: unterminated #else
     #if 0
 ^
main.cpp: In function 'int main()':
main.cpp:30:12: error: no match for 'operator==' (operand types are 'CatIdentifier' and 'CatIdentifier')
     if(id1 == id2){
            ^
